--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 
 .newsletter {
     color: grey;
+    border: thin solid #cfcfcf;
+    border-radius: 3px;
+    padding: 10px;
+    position: relative;
+    padding-bottom: 10px;
 }
 
 .newsletter button {
@@ -16,4 +21,43 @@
     display: block;
     width: 100%;
     height: 30px;
+    margin-bottom: 10px;
+}
+
+.newsletter input#email {
+    display: block;
+    width: 100%;
+    height: 30px;
+    border: 1px solid #cfcfcf;
+    margin-bottom: 4px;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+.newsletter h3 {
+    margin-top: 0;
+}
+
+.newsletter #terms {
+    position: relative;
+    top: 1px;
+}
+
+.newsletter #closex {
+    position: absolute;
+    top: 0;
+    right: 4px;
+}
+
+#questionmark {
+    background-color: #3cb878;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    font-size: 70px;
+    text-align: center;
+    color: white;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
 }
